<resources>    <string name="app_name">Vehicle Data</string>    <string name="make">Make: \t</string>    <string name="model">Model: \t</string>    <string name="price">Price: \t</string>    <string name="mileage">Mileage: \t</string>    <string name="fuel">Fuel: \t</string>    <string name="description">Description: \t</string>    <string name="seller">Seller \t</string>    <string name="type">Type: \t</string>    <string name="phone">Phone: \t</string>    <string name="city">City: \t</string>    <string name="colour">Colour: \t</string>    <string name="notes">Notes: \t</string>    <string name="some_errors_while_fetching_data">Some errors while fetching data</string>    <string name="some_errors_while_fetching_notes">Some errors while fetching notes</string></resources>